# verchew

./: .appveyor.yml  .gitignore  .isort.cfg  .pycodestyle.ini  .pylint.ini  .python-version  .readthedocs.yml  .scrutinizer.yml  .tool-versions  .travis.yml  .verchew  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  README.md  circle.yml  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  setup.py
.github/workflows/: main.yml
docs/: requirements.txt
docs/cli/: config.md  configuration.md  embedding.md  options.md  vendoring.md
examples/: Makefile  README.md  verchew.ini
requirements/: ci.txt
tests/: conftest.py  test_cli.py
tests/files/: verchew.ini
verchew/: __init__.py  __main__.py  cli.py  gui.py  script.py  utils.py  wrapper.sh
verchew/tests/: conftest.py  test_script.py  test_utils.py
