[tool.poetry]

name = "verchew"
version = "3.3"  # also update verchew/script.py
description = "System dependency version checker."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/verchew"
documentation = "https://verchew.readthedocs.io"
repository = "https://github.com/jacebrowning/verchew"

keywords = [
    "dependencies",
    "configuration management",
    "continuous integration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]

python = "^3.6"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.10b0"
isort = "=4.3.21"

# Linters
mypy = "*"
pydocstyle = "^3"
pylint = "^2"

# Testing
pytest = "^5"
pytest-cov = "*"
pytest-describe = "^1.0"
pytest-expecter = "*"
pytest-random = "*"
scripttest = "*"

# Reports
coveragespace = "^4.2"

# Documentation
mkdocs = "~1.2.3"
pygments = "~2.7.4"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

verchew = "verchew.script:main"

[tool.black]

target_version = ['py36', 'py37']
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
